fix overlay background color in dark mode

--- a/src-ui/src/app/components/dashboard/widgets/upload-file-widget/upload-file-widget.component.scss
+++ b/src-ui/src/app/components/dashboard/widgets/upload-file-widget/upload-file-widget.component.scss
@@ -34,6 +34,6 @@ form {
   pointer-events: none;
 }
 
-.ngx-file-drop__drop-zone--over {
+::ng-deep .ngx-file-drop__drop-zone--over {
   background-color: var(--ngx-primary-faded) !important;
 }
